# test-task-publicisgroupe

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
analytics/: admin.py  forms.py  models.py  urls.py  views.py
analytics/migrations/: 0001_initial.py
analytics/templates/analytics/: base.html  dashboard.html  login.html
analytics/tests/: test_views.py
config/: settings.py  urls.py
task_data/: Task. Fact data_template 1.xlsx  Task. Fact data_test.xlsx  TestTask_Python developer.docx
