[project]
name = "test-task-publicisgroupe"
version = "0.1.0"
description = ""
authors = [
    {name = "vlchshn",email = "vlchshn.code@gmail.com"}
]
requires-python = ">=3.11"
dependencies = [
    "django (<6.0)",
    "pandas (>=3.0.3,<4.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "psycopg2-binary (>=2.9.12,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.1.1,<10.0.0)",
    "pytest-django (>=4.12.0,<5.0.0)",
    "pytest-cov (>=7.1.0,<8.0.0)",
    "ruff (>=0.15.21,<0.16.0)"
]
